Update after power outage

--- a/config/config.ipynb
+++ b/config/config.ipynb
@@ -39,8 +39,8 @@
    "source": [
     "from nbd import reads\n",
     "\n",
-    "with open('config/index.ipynb') as f:\n",
-    "    data = reads(f.read(), 4)"
+    "with open('config/index.ipynb') as f: data = reads(f.read(), 4)\n",
+    "with open('config/about.ipynb') as f: about = reads(f.read(), 4)"
    ]
   },
   {
@@ -63,6 +63,7 @@
    "source": [
     "def report():\n",
     "    yield 'index', data\n",
+    "    yield 'about', about\n",
     "\n",
     "## A simple index.\n",
     "\n",
@@ -70,7 +71,7 @@
     "c.FilesWriter.build_directory = 'docs'\n",
     "c.Docs.update(\n",
     "    report=report,\n",
-    "    post=index(data, \"h1,h2\"))"
+    "    post=index(data))"
    ]
   },
   {
