--- a/readme.ipynb
+++ b/readme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,23 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook readme.ipynb to markdown\r\n",
-      "[NbConvertApp] Writing 677 bytes to readme.md\r\n",
+      "[NbConvertApp] Writing 1368 bytes to readme.md\r\n",
       "[NbConvertApp] Converting notebook config/config.ipynb to python\r\n",
-      "[NbConvertApp] Writing 533 bytes to config/config.py\r\n",
-      "Traceback (most recent call last):\r\n",
-      "  File \"/Users/tonyfast/anaconda/bin/jupyter-nbd\", line 11, in <module>\r\n",
-      "    load_entry_point('nbd', 'console_scripts', 'jupyter-nbd')()\r\n",
-      "  File \"/Users/tonyfast/anaconda/lib/python3.5/site-packages/setuptools-27.2.0-py3.5.egg/pkg_resources/__init__.py\", line 565, in load_entry_point\r\n",
-      "  File \"/Users/tonyfast/anaconda/lib/python3.5/site-packages/setuptools-27.2.0-py3.5.egg/pkg_resources/__init__.py\", line 2598, in load_entry_point\r\n",
-      "  File \"/Users/tonyfast/anaconda/lib/python3.5/site-packages/setuptools-27.2.0-py3.5.egg/pkg_resources/__init__.py\", line 2258, in load\r\n",
-      "  File \"/Users/tonyfast/anaconda/lib/python3.5/site-packages/setuptools-27.2.0-py3.5.egg/pkg_resources/__init__.py\", line 2264, in resolve\r\n",
-      "  File \"/Users/tonyfast/nbd/nbd.py\", line 48, in <module>\r\n",
-      "    def identity(path, resources: dict=None, **kw) -> t.Tuple[NotebookNode, dict]:\r\n",
-      "NameError: name 't' is not defined\r\n"
+      "[NbConvertApp] Writing 524 bytes to config/config.py\r\n",
+      "[Docs] Converting notebook posts/2017-09-10-First-Post.ipynb to html\r\n",
+      "[Docs] Writing 253471 bytes to docs/posts/2017-09-10-First-Post.ipynb.html\r\n",
+      "[Docs] Converting notebook posts/2017-09-10-Project-Statistics.ipynb to html\r\n",
+      "[Docs] Writing 290468 bytes to docs/posts/2017-09-10-Project-Statistics.ipynb.html\r\n",
+      "[Docs] Converting notebook posts/2017-09-11-Gaskets-in-a-storm.ipynb to html\r\n",
+      "[Docs] Writing 369862 bytes to docs/posts/2017-09-11-Gaskets-in-a-storm.ipynb.html\r\n",
+      "[Docs] Converting notebook posts/jupyter4kids.ipynb to html\r\n",
+      "[Docs] Writing 268436 bytes to docs/posts/jupyter4kids.ipynb.html\r\n",
+      "[Docs] Converting notebook posts/powers-often.ipynb to html\r\n",
+      "[Docs] Writing 250242 bytes to docs/posts/powers-often.ipynb.html\r\n",
+      "[Docs] Converting notebook into html\r\n",
+      "[Docs] Writing 251224 bytes to docs/index.html\r\n",
+      "[Docs] Converting notebook into html\r\n",
+      "[Docs] Writing 249240 bytes to docs/about.html\r\n"
      ]
     }
    ],
