--- a/config/index.ipynb
+++ b/config/index.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# forever whatever"
+    "# forever whatever\n",
+    "\n",
+    "`tonyfast`'s daily code.  \n",
+    "\n",
+    "[github](https://github.com/tonyfast) 🔗 [gist](https://gist.github.com/tonyfast) 🔗 [linkedin](https://www.linkedin.com/in/tonyfast/) 🔗 [slideshare](https://www.slideshare.net/tonyfast1) 🔗 [instagram](https://www.instagram.com/docfast/) 🔗 [twitter]( 🔗 [Resume](TonyFastProfile.pdf) 🔗 [works in progress](https://github.com/tonyfast/wip)"
    ]
   }
  ],
