Fix link in index

--- a/config/index.ipynb
+++ b/config/index.ipynb
@@ -8,8 +8,15 @@
     "\n",
     "`tonyfast`'s daily code.  \n",
     "\n",
-    "[github](https://github.com/tonyfast) 🔗 [gist](https://gist.github.com/tonyfast) 🔗 [linkedin](https://www.linkedin.com/in/tonyfast/) 🔗 [slideshare](https://www.slideshare.net/tonyfast1) 🔗 [instagram](https://www.instagram.com/docfast/) 🔗 [twitter]( 🔗 [Resume](TonyFastProfile.pdf) 🔗 [works in progress](https://github.com/tonyfast/wip)"
+    "[github](https://github.com/tonyfast) 🔗 [gist](https://gist.github.com/tonyfast) 🔗 [linkedin](https://www.linkedin.com/in/tonyfast/) 🔗 [slideshare](https://www.slideshare.net/tonyfast1) 🔗 [instagram](https://www.instagram.com/docfast/) 🔗 [twitter](https://twitter.com/DocFast) 🔗 [Resume](TonyFastProfile.pdf) 🔗 [works in progress](https://github.com/tonyfast/wip)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
