--- a/config/index.ipynb
+++ b/config/index.ipynb
@@ -4,19 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# forever whatever\n",
+    "# [forever whatever](tonyfast.github.io/forever-whatever/)\n",
     "\n",
     "`tonyfast`'s daily code.  \n",
     "\n",
     "[github](https://github.com/tonyfast) 🔗 [gist](https://gist.github.com/tonyfast) 🔗 [linkedin](https://www.linkedin.com/in/tonyfast/) 🔗 [slideshare](https://www.slideshare.net/tonyfast1) 🔗 [instagram](https://www.instagram.com/docfast/) 🔗 [twitter](https://twitter.com/DocFast) 🔗 [Resume](TonyFastProfile.pdf) 🔗 [works in progress](https://github.com/tonyfast/wip)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
