--- a/readme.ipynb
+++ b/readme.ipynb
@@ -1,1 +1,133 @@
-{"cells": [{"source": ["# clog"], "cell_type": "markdown", "metadata": {}}, {"source": ["from clog import *"], "cell_type": "code", "execution_count": 1, "metadata": {}, "outputs": [{"output_type": "error", "ename": "SyntaxError", "evalue": "invalid syntax (<ipython-input-1-f1efa96ff1e0>, line 1)", "traceback": ["\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-f1efa96ff1e0>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    from clog import *\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax"]}]}, {"source": ["%%bash", "jupyter nbconvert --to markdown readme.ipynb"], "cell_type": "code", "execution_count": 2, "metadata": {}, "outputs": [{"output_type": "error", "ename": "SyntaxError", "evalue": "invalid syntax (<ipython-input-2-697e0a9ce889>, line 1)", "traceback": ["\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-697e0a9ce889>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    jupyter nbconvert --to markdown readme.ipynb\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax"]}]}, {"source": [], "cell_type": "code", "execution_count": null, "metadata": {}, "outputs": []}], "metadata": {"language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "mimetype": "text/x-python", "name": "python", "file_extension": ".py", "version": "3.5.3", "pygments_lexer": "ipython3", "nbconvert_exporter": "python"}, "kernelspec": {"display_name": "Python 3", "name": "python3", "language": "python"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# clog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "[config.ipynb]()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "[readme.ipynb]()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "[clog/2017-09-10-Project-Statistics.ipynb]()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "[clog/2017-09-11-Gaskets-in-a-storm.ipynb]()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "[clog/2017-09-12-Atlanta-Wages.ipynb]()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "[clog/2017-09-14-About-Me.ipynb]()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import *; from pathlib import Path\n",
+    "for path in Path('.').rglob('*.ipynb'): 'checkpoints' not in str(path) and display(Markdown(\"[{}]()\".format(path)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook readme.ipynb to markdown\r\n",
+      "[NbConvertApp] Writing 475 bytes to readme.md\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to markdown readme.ipynb"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
