--- a/readme.ipynb
+++ b/readme.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "[config.ipynb]()"
+       "[config.ipynb](config.html)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/markdown": [
-       "[readme.ipynb]()"
+       "[readme.ipynb](readme.html)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/markdown": [
-       "[clog/2017-09-10-Project-Statistics.ipynb]()"
+       "[clog/2017-09-10-Project-Statistics.ipynb](clog/2017-09-10-Project-Statistics.html)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -51,7 +51,7 @@
     {
      "data": {
       "text/markdown": [
-       "[clog/2017-09-11-Gaskets-in-a-storm.ipynb]()"
+       "[clog/2017-09-11-Gaskets-in-a-storm.ipynb](clog/2017-09-11-Gaskets-in-a-storm.html)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/markdown": [
-       "[clog/2017-09-12-Atlanta-Wages.ipynb]()"
+       "[clog/2017-09-12-Atlanta-Wages.ipynb](clog/2017-09-12-Atlanta-Wages.html)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/markdown": [
-       "[clog/2017-09-14-About-Me.ipynb]()"
+       "[clog/2017-09-14-About-Me.ipynb](clog/2017-09-14-About-Me.html)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -87,25 +87,34 @@
    ],
    "source": [
     "from IPython.display import *; from pathlib import Path\n",
-    "for path in Path('.').rglob('*.ipynb'): 'checkpoints' not in str(path) and display(Markdown(\"[{}]()\".format(path)))"
+    "for path in Path('.').rglob('*.ipynb'): 'checkpoints' not in str(path) and display(\n",
+    "    Markdown(\"[{}]({})\".format(path, path.with_suffix('.html'))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[NbConvertApp] Converting notebook clog/2017-09-10-Project-Statistics.ipynb to html\r\n",
+      "[NbConvertApp] Writing 286307 bytes to clog/2017-09-10-Project-Statistics.html\r\n",
+      "[NbConvertApp] Converting notebook clog/2017-09-11-Gaskets-in-a-storm.ipynb to html\r\n",
+      "[NbConvertApp] Writing 483346 bytes to clog/2017-09-11-Gaskets-in-a-storm.html\r\n",
+      "[NbConvertApp] Converting notebook clog/2017-09-12-Atlanta-Wages.ipynb to html\r\n",
+      "[NbConvertApp] Writing 320466 bytes to clog/2017-09-12-Atlanta-Wages.html\r\n",
+      "[NbConvertApp] Converting notebook clog/2017-09-14-About-Me.ipynb to html\r\n",
+      "[NbConvertApp] Writing 366415 bytes to clog/2017-09-14-About-Me.html\r\n",
       "[NbConvertApp] Converting notebook readme.ipynb to markdown\r\n",
-      "[NbConvertApp] Writing 475 bytes to readme.md\r\n"
+      "[NbConvertApp] Writing 797 bytes to readme.md\r\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to markdown readme.ipynb"
+    "!jupyter nbconvert clog/*.ipynb && jupyter nbconvert --to markdown readme.ipynb"
    ]
   }
  ],
