--- a/readme.ipynb
+++ b/readme.ipynb
@@ -4,118 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# clog"
+    "# [clog <small>code and words</small>](https://tonyfast.github.io/clog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "[config.ipynb](config.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "[readme.ipynb](readme.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "[clog/2017-09-10-Project-Statistics.ipynb](clog/2017-09-10-Project-Statistics.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "[clog/2017-09-11-Gaskets-in-a-storm.ipynb](clog/2017-09-11-Gaskets-in-a-storm.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "[clog/2017-09-12-Atlanta-Wages.ipynb](clog/2017-09-12-Atlanta-Wages.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "[clog/2017-09-14-About-Me.ipynb](clog/2017-09-14-About-Me.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from IPython.display import *; from pathlib import Path\n",
-    "for path in Path('.').rglob('*.ipynb'): 'checkpoints' not in str(path) and display(\n",
-    "    Markdown(\"[{}]({})\".format(path, path.with_suffix('.html'))))"
+    "!jupyter nbconvert --execute --to notebook --inplace index.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook clog/2017-09-10-Project-Statistics.ipynb to html\r\n",
-      "[NbConvertApp] Writing 286307 bytes to clog/2017-09-10-Project-Statistics.html\r\n",
-      "[NbConvertApp] Converting notebook clog/2017-09-11-Gaskets-in-a-storm.ipynb to html\r\n",
-      "[NbConvertApp] Writing 483346 bytes to clog/2017-09-11-Gaskets-in-a-storm.html\r\n",
-      "[NbConvertApp] Converting notebook clog/2017-09-12-Atlanta-Wages.ipynb to html\r\n",
-      "[NbConvertApp] Writing 320466 bytes to clog/2017-09-12-Atlanta-Wages.html\r\n",
-      "[NbConvertApp] Converting notebook clog/2017-09-14-About-Me.ipynb to html\r\n",
-      "[NbConvertApp] Writing 366415 bytes to clog/2017-09-14-About-Me.html\r\n",
-      "[NbConvertApp] Converting notebook readme.ipynb to markdown\r\n",
-      "[NbConvertApp] Writing 797 bytes to readme.md\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!jupyter nbconvert clog/*.ipynb && jupyter nbconvert --to markdown readme.ipynb"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
