Similar changes to wip

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [clog <small>code and words</small>](https://tonyfast.github.io/clog)"
+    "# [<small>code and works</small>](https://tonyfast.github.io/clog)\n",
+    "\n",
+    "<code>pip install git+<a href=\"https://github.com/tonyfast/clog\">https://github.com/tonyfast/clog</a></code>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from clog import *"
    ]
   },
   {
@@ -18,17 +29,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook index.ipynb to notebook\r\n",
+      "[NbConvertApp] Executing notebook with kernel: python3\r\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --execute --to notebook --inplace index.ipynb"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
