--- a/readme.ipynb
+++ b/readme.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook index.ipynb to notebook\r\n",
-      "[NbConvertApp] Executing notebook with kernel: python3\r\n"
+      "[NbConvertApp] Executing notebook with kernel: python3\r\n",
+      "[NbConvertApp] Writing 3667 bytes to index.ipynb\r\n"
      ]
     }
    ],
