--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert clog/*.ipynb && jupyter nbconvert --to markdown readme.ipynb"
+    "!jupyter nbconvert clog/*.ipynb"
    ]
   }
  ],
