Delete more arguments

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -27,21 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook index.ipynb to notebook\r\n",
-      "[NbConvertApp] Executing notebook with kernel: python3\r\n",
-      "[NbConvertApp] Writing 3667 bytes to index.ipynb\r\n"
+      "[NbConvertApp] Converting notebook index.ipynb to html\r\n",
+      "[NbConvertApp] Executing notebook with kernel: python3\r\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --execute --to notebook --inplace index.ipynb"
+    "!jupyter nbconvert --execute index.ipynb"
    ]
   }
  ],
