Modify readme and index

--- a/index.ipynb
+++ b/index.ipynb
@@ -9,33 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "[index.ipynb](index.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "[readme.ipynb](readme.html)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/markdown": [
@@ -87,13 +63,13 @@
    ],
    "source": [
     "from IPython.display import *; from pathlib import Path\n",
-    "for path in Path('.').rglob('*.ipynb'): 'checkpoints' not in str(path) and display(\n",
-    "    Markdown(\"[{}]({})\".format(path, path.with_suffix('.html'))))"
+    "for path in Path('clog').rglob('*.ipynb'): \n",
+    "    display(Markdown(\"[{}]({})\".format(path, path.with_suffix('.html'))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,14 +83,24 @@
       "[NbConvertApp] Converting notebook clog/2017-09-12-Atlanta-Wages.ipynb to html\r\n",
       "[NbConvertApp] Writing 320466 bytes to clog/2017-09-12-Atlanta-Wages.html\r\n",
       "[NbConvertApp] Converting notebook clog/2017-09-14-About-Me.ipynb to html\r\n",
-      "[NbConvertApp] Writing 366415 bytes to clog/2017-09-14-About-Me.html\r\n",
-      "[NbConvertApp] Converting notebook readme.ipynb to markdown\r\n",
-      "[NbConvertApp] Writing 429 bytes to readme.md\r\n"
+      "[NbConvertApp] Writing 366415 bytes to clog/2017-09-14-About-Me.html\r\n"
      ]
     }
    ],
    "source": [
     "!jupyter nbconvert clog/*.ipynb"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "<!-- edit style here -->\n",
+    "<style>\n",
+    ".code_cell .input, .output_stdout {\n",
+    "    display: none;\n",
+    "}\n",
+    "</style>"
    ]
   }
  ],
