--- a/readme.ipynb
+++ b/readme.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +35,21 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook index.ipynb to html\r\n",
-      "[NbConvertApp] Executing notebook with kernel: python3\r\n"
+      "[NbConvertApp] Executing notebook with kernel: python3\r\n",
+      "[NbConvertApp] Writing 252782 bytes to index.html\r\n"
      ]
     }
    ],
    "source": [
     "!jupyter nbconvert --execute index.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
