--- a/clog/2017-20-09-25💯-States.ipynb
+++ b/clog/2017-20-09-25💯-States.ipynb
@@ -650,6 +650,13 @@
     "\n",
     "show(p)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Consider making a package that has each patch easily available with the correct transforms."
+   ]
   }
  ],
  "metadata": {
