--- a/clog/2017-09-14-About-Me.ipynb
+++ b/clog/2017-09-14-About-Me.ipynb
@@ -246,6 +246,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wip.clsindex import PathIndex"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,7 +262,7 @@
     "\n",
     "To do:\n",
     "\n",
-    "download gists and analyze imports."
+    "[<del>download gists</del>](https://tonyfast.github.io/clog/clog/2017-09-21-Automate-Gist-Collection-With-Doit.html) and analyze imports."
    ]
   }
  ],
