--- a/clog/2017-09-21-Ast-dispatch.ipynb
+++ b/clog/2017-09-21-Ast-dispatch.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# An exploration of my Python Imports over tiem\n",
+    "# An exploration of my Python Imports over time\n",
     "\n",
     "Explore my gists downloaded from a [previous post about doit](https://tonyfast.github.io/clog/clog/2017-09-21-Automate-Gist-Collection-With-Doit.html).  This notebook parses each of the cells looking for imports.  Ending with a historical plot of package over time."
    ]
