--- a/clog/2017-09-24-Single-Dispatch.ipynb
+++ b/clog/2017-09-24-Single-Dispatch.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -46,22 +46,23 @@
     "@functor.register(Sequence)\n",
     "def _(fns, *args, **kwargs):\n",
     "    return type(fns)([\n",
-    "        caller(f, *args, **kwargs) for f in fns])\n",
+    "        functor(f, *args, **kwargs) for f in fns])\n",
     "\n",
     "@functor.register(\n",
     "    issubclass(Mapping, Container) and Container or Mapping\n",
     ")\n",
     "def _(fns, *args, **kwargs):\n",
+    "\n",
     "    return type(callables)((\n",
-    "        caller(k, *args, **kwargs), \n",
-    "        caller(fns[k], *args, **kwargs)\n",
+    "        functor(k, *args, **kwargs), \n",
+    "        functor(fns[k], *args, **kwargs)\n",
     "    ) for k in fns)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
